# trading_system_pro

./: .dockerignore  .env.example  .gitignore  CONSOLIDATION_PROMPT.md  CURSOR_DOCKER_DEPLOY.md  Dockerfile  PROMPT_DASHBOARD_ML_UPGRADE.md  README.md  agno_tools.py  analytics_report.json  api_utils.py  binance_client.py  binance_futures_executor.py  config.py  constants.py  continuous_backtest_validator.py  deep_analysis_report.txt  deepseek_client.py  docker-compose.yml  generate_dataset.py  log.txt  main.py  metrics_data.csv  metrics_report.txt  ml_dashboard.py  ml_online_learning.py  orphan_order_cleaner.py  portfolio_manager.py  pyproject.toml  real_paper_trading.py  requirements.txt  revalidation_report.txt  signal_reevaluator.py  simple_signal_validator.py  stop_adjuster.py  streamlit_dashboard.py  test_corrections.py  trading_agent_agno.py
dashboard/: app.py
docs/: BACKTEST_EXTRACTION_REPORT.md  CONEXOES_SINAIS_CONFLUENCIA.md  FASE2_AUDITORIA.md  FASE3_ESTRATEGIAS.md  FASE4_ML_SENTIMENT.md  FASE5_INDICADORES_DASHBOARD.md  FASE6_TREE.txt  PROMPT_OPUS_BACKTEST_OPTIMIZATION.md  REPOS_EXTRACTION.md  exemplos_respostas_deepseek_no_signal.json  relatorio_dia_2026-03-16.md
filters/: __init__.py  fundamental_filter.py  market_condition_filter.py  time_filter.py  volatility_filter.py
indicators/: __init__.py  technical.py
ml/: __init__.py
scripts/: backfill_signal_validations.py  backfill_voter_accuracy.py  clean_analysis.py  close_position.py  continuous_ml_trainer.py  deep_signal_analysis.py  deepseek_style_report.py  deploy.ps1  deploy.sh  extract_analytics.py  (+5 more)
(+175 files in other folders)
